<resources>
    <string name="app_name">BinLoader</string>

    <string name="additional_information">Дополнительная информация</string>
    <string name="Your_card">Ваши карты</string>
    <string name="history">история запросов</string>
    <string name="add_card">+ Добавить карту</string>
    <string name="brand">BRAND</string>
    <string name="type">TYPE</string>
    <string name="country">COUNTRY -</string>
    <string name="detailed_information">Нажмите чтобы узнать более подробно</string>
    <string name="bin_input">Введите BIN карты</string>
    <string name="added_card">Добавить карту</string>
    <string name="number_error">number error</string>
    <string name="error_mess">BIN карты должен содердать 8 чисел</string>
    <string name="user_name">Имя владельца</string>
    <string name="error_empty_field">empty field</string>
    <string name="error_mess_empty_field">введите имя</string>

    <string name="error_network_mess">ERROR NETWORK</string>
    <string name="input_bin">input bin:</string>
    <string name="input_your_name">input your name:</string>
    <string name="success_mess">Success</string>
    <string name="some_bank">Bank</string>

    <string name="website">Сайт\u0020</string>
    <string name="phone">Телефон\u0020</string>
    <string name="country_info">Страна\u0020</string>

    <string name="bin">BIN\u0020</string>
    <string name="your_country">COUNTRY - </string>
    <string name="your_name">Your name</string>
    <string name="card_num_length">CARD NUM LENGTH -</string>
    <string name="prepaid">PREPAID -</string>
    <string name="bin_loader">Bin Loader</string>
    <string name="history_bottom_bar">History</string>
    <string name="info_bottom_bar">О приложении</string>
    <string name="information">Приложение для поиска даных банка карты по BIN коду</string>
    <string name="history_header">Истоия запросов</string>
    <string name="delete_history">удалить историю</string>
    <string name="network_error_body">NetWork ERROR body</string>
    <string name="network_error_exp_mess">NetWork ERROR</string>
    <string name="loading_mess">Loading</string>
</resources>