<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewContainerYourCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                android:text="@string/Your_card"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAddedYouCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="12dp"
                tools:itemCount="1"
                tools:listitem="@layout/card_items" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/history"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardViewContainerYourCard"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipAddedCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:layout_marginEnd="8dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardViewContainerYourCard"
        app:layout_constraintEnd_toStartOf="@+id/chipHistory"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textYourNameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Nikita Rybakov"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/yourCardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F4FFF9"
        app:cardCornerRadius="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textYourNameCard"
        app:strokeColor="#B3B3B3"
        app:strokeWidth="1dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/your_card_back" />

        <com.example.yourbank.ui.customView.AnimationLoadingCard
            android:id="@+id/customProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/chip_image_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCountry" />

            <TextView
                android:id="@+id/textNameBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Tinkoff Bank"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textYourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="NIKITA RYBAKOV"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/brand"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textNameBank"
                app:layout_constraintTop_toBottomOf="@+id/textNameBank" />

            <TextView
                android:id="@+id/textBrandCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Visa/Dankort"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/textBrand"
                app:layout_constraintTop_toBottomOf="@+id/textBrand"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/type"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textBrandCard"
                app:layout_constraintTop_toBottomOf="@+id/textNameBank" />

            <TextView
                android:id="@+id/textTypeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Debit/Credit"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/textType"
                app:layout_constraintTop_toBottomOf="@+id/textType"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:text="@string/country"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textCountryName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Denmark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textCountry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="BIN 4571 7360"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textYourName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBrandCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/additional_information"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="Сайт   www.jyskebank.dk"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInfo" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Телефон   +4589893300"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textWeb" />

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Страна/Город   Denmark/Hjørring"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPhone" />

            <TextView
                android:id="@+id/textClickInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/detailed_information"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCity"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="36dp"
        android:elevation="10dp"
        app:cardCornerRadius="46dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>